# QuickCal

./: .prettierignore  .prettierrc.json  README.md  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri-build.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/assets/: auth.html
src-tauri/capabilities/: default.json
src-tauri/src/: .env.example  auth.rs  lib.rs  logger.rs  main.rs  shortcut.rs
src-tauri/src/auth/: keyring.rs  oauth.rs  refresh.rs
src-tauri/src/schemas/: acl-manifests.json  capabilities.json  linux-schema.json
src/components/: ApiConsole.tsx  AuthPanel.tsx  AuthSection.tsx  EventRegisterPanel.tsx
src/store/: authStore.ts
src/utils/: clipboard.ts  dateParse.ts
