[package]
name = "quickcal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quickcal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oauth2 = { version = "5", features = ["reqwest"] }
url = "2.5.7"
open = "5"
tokio = { version = "1", features = ["rt", "sync"] }
axum = "0.8"
keyring = { version = "3.6.3", features = ["windows-native", "macos-native", "linux-native"] }
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
anstyle = "1.0"
